<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    tools:context=".EditProfileFragment">

    <LinearLayout
        android:id="@+id/ll_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="17dp"
        android:paddingTop="42dp"

        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/ripple_effect_80"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="19dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            app:tint="?attr/colorOnBackground"
            android:contentDescription="@string/action_back"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="3dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_back"
            android:textSize="20sp"
            android:fontFamily="@font/cygre_book"
            android:textColor="?attr/colorOnBackground" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_edit_profile_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_edit_profile"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="@font/cygre_semibold"
        android:textColor="?attr/colorOnBackground"
        android:paddingTop="36dp"
        android:paddingStart="95dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/ll_back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="87dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/ll_content_container"
            android:layout_width="match_parent"  android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="17dp"
            android:paddingEnd="17dp"
            android:gravity="start">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile_photo_edit"
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:civ_border_width="2dp"
                app:civ_border_color="?attr/colorOnBackground"
                android:src="@drawable/ic_user_avatar"
                android:layout_marginBottom="50dp"/>

            <TextView
                style="@style/LabelStyle"
                android:text="@string/label_name" />
            <EditText
                android:id="@+id/et_name"
                style="@style/CustomEditTextStyle"
                android:text="@string/profile_name"
                android:inputType="text"
                android:layout_marginBottom="40dp" />

            <TextView
                style="@style/LabelStyle"
                android:text="@string/label_username" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="40dp"
                android:background="@drawable/edit_text_background"

                android:paddingTop="12dp"    android:paddingBottom="12dp"> <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\u0040"
                android:textSize="20sp"
                android:textColor="?attr/colorOnBackground"
                android:fontFamily="@font/cygre_book"
                android:paddingStart="23dp"
                android:paddingEnd="5dp"
                android:layout_gravity="center_vertical"/>

                <EditText
                    android:id="@+id/et_username"
                    style="@style/CustomEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_username"
                    android:inputType="text"
                    android:layout_marginBottom="0dp"
                    android:background="@null"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp" />
            </LinearLayout>

            <TextView
                style="@style/LabelStyle"
                android:text="@string/label_phone" />
            <EditText
                android:id="@+id/et_phone_number"
                style="@style/CustomEditTextStyle"
                android:text="@string/profile_phone"
                android:inputType="phone"
                android:layout_marginBottom="90dp" />

            <TextView
                android:id="@+id/tv_save_changes_button"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/action_save_changes"
                android:gravity="center"
                android:textSize="20sp"
                android:fontFamily="@font/cygre_book"

                android:textColor="?android:attr/colorBackground"
                android:background="@drawable/save_button_selector"

                android:clickable="true"
                android:focusable="true"
                android:layout_marginBottom="50dp"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>