<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="?android:attr/colorBackground"
    tools:context=".ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/tv_profile_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_profile"
            android:textSize="25sp"
            android:fontFamily="@font/cygre_semibold"
            android:textColor="?attr/colorOnBackground"
            android:paddingStart="17dp"
            android:paddingEnd="0dp"
            android:paddingTop="33dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_edit"
            android:textSize="20sp"
            android:fontFamily="@font/cygre_book"
            android:textColor="?attr/colorOnBackground"
            android:paddingTop="42dp"
            android:paddingEnd="17dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/ripple_effect_80" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile_photo"
            android:layout_width="140dp"
            android:layout_height="140dp"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/light_grey"
            android:src="@drawable/ic_user_avatar"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="180dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_name"
            android:textSize="25sp"
            android:fontFamily="@font/cygre_semibold"
            android:textColor="?attr/colorOnBackground"
            app:layout_constraintTop_toBottomOf="@id/iv_profile_photo"
            android:layout_marginTop="55dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_username"
            android:textSize="20sp"
            android:fontFamily="@font/cygre_book"
            android:textColor="?attr/colorOnBackground"
            app:layout_constraintTop_toBottomOf="@id/tv_user_name"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_phone"
            android:textSize="20sp"
            android:fontFamily="@font/cygre_book"
            android:textColor="?attr/colorOnBackground"
            app:layout_constraintTop_toBottomOf="@id/tv_username"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>